transpiler/simplified/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEANO
    CADENA
    CADENA_VALOR
    CIERTO
    COMA
    CUANDO
    DIFIERE
    ENTERO
    ENTONCES
    EQUIVALE
    FALSO
    FIN
    IDENTIF_ILEGAL
    IGUAL
    IMPRIMIR
    INICIO
    LEER
    LISTO
    MAYORQUE
    MAYOR_IGUAL
    MENORQUE
    MENOR_IGUAL
    MIENTRAS
    NO
    O
    PUNTO
    REAL
    SINO
    Y

Grammar

Rule 0     S' -> expression
Rule 1     expression -> PARIZ expression PARDE
Rule 2     expression -> expression MAS expression
Rule 3     expression -> expression MENOS expression
Rule 4     expression -> expression POR expression
Rule 5     expression -> expression ENTRE expression
Rule 6     expression -> value
Rule 7     expression -> ABRE_RPN special_expression CIERRA_RPN
Rule 8     special_expression -> special_expression special_expression MAS
Rule 9     special_expression -> special_expression special_expression MENOS
Rule 10    special_expression -> special_expression special_expression POR
Rule 11    special_expression -> special_expression special_expression ENTRE
Rule 12    special_expression -> value
Rule 13    value -> IDENTIF
Rule 14    value -> NUMERO

Terminals, with rules where they appear

ABRE_RPN             : 7
BOOLEANO             : 
CADENA               : 
CADENA_VALOR         : 
CIERRA_RPN           : 7
CIERTO               : 
COMA                 : 
CUANDO               : 
DIFIERE              : 
ENTERO               : 
ENTONCES             : 
ENTRE                : 5 11
EQUIVALE             : 
FALSO                : 
FIN                  : 
IDENTIF              : 13
IDENTIF_ILEGAL       : 
IGUAL                : 
IMPRIMIR             : 
INICIO               : 
LEER                 : 
LISTO                : 
MAS                  : 2 8
MAYORQUE             : 
MAYOR_IGUAL          : 
MENORQUE             : 
MENOR_IGUAL          : 
MENOS                : 3 9
MIENTRAS             : 
NO                   : 
NUMERO               : 14
O                    : 
PARDE                : 1
PARIZ                : 1
POR                  : 4 10
PUNTO                : 
REAL                 : 
SINO                 : 
Y                    : 
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 2 3 3 4 4 5 5 0
special_expression   : 7 8 8 9 9 10 10 11 11
value                : 6 12

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . PARIZ expression PARDE
    (2) expression -> . expression MAS expression
    (3) expression -> . expression MENOS expression
    (4) expression -> . expression POR expression
    (5) expression -> . expression ENTRE expression
    (6) expression -> . value
    (7) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    PARIZ           shift and go to state 2
    ABRE_RPN        shift and go to state 4
    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    expression                     shift and go to state 1
    value                          shift and go to state 3

state 1

    (0) S' -> expression .
    (2) expression -> expression . MAS expression
    (3) expression -> expression . MENOS expression
    (4) expression -> expression . POR expression
    (5) expression -> expression . ENTRE expression

    MAS             shift and go to state 7
    MENOS           shift and go to state 8
    POR             shift and go to state 9
    ENTRE           shift and go to state 10


state 2

    (1) expression -> PARIZ . expression PARDE
    (1) expression -> . PARIZ expression PARDE
    (2) expression -> . expression MAS expression
    (3) expression -> . expression MENOS expression
    (4) expression -> . expression POR expression
    (5) expression -> . expression ENTRE expression
    (6) expression -> . value
    (7) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    PARIZ           shift and go to state 2
    ABRE_RPN        shift and go to state 4
    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    expression                     shift and go to state 11
    value                          shift and go to state 3

state 3

    (6) expression -> value .

    MAS             reduce using rule 6 (expression -> value .)
    MENOS           reduce using rule 6 (expression -> value .)
    POR             reduce using rule 6 (expression -> value .)
    ENTRE           reduce using rule 6 (expression -> value .)
    $end            reduce using rule 6 (expression -> value .)
    PARDE           reduce using rule 6 (expression -> value .)


state 4

    (7) expression -> ABRE_RPN . special_expression CIERRA_RPN
    (8) special_expression -> . special_expression special_expression MAS
    (9) special_expression -> . special_expression special_expression MENOS
    (10) special_expression -> . special_expression special_expression POR
    (11) special_expression -> . special_expression special_expression ENTRE
    (12) special_expression -> . value
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    special_expression             shift and go to state 12
    value                          shift and go to state 13

state 5

    (13) value -> IDENTIF .

    MAS             reduce using rule 13 (value -> IDENTIF .)
    MENOS           reduce using rule 13 (value -> IDENTIF .)
    POR             reduce using rule 13 (value -> IDENTIF .)
    ENTRE           reduce using rule 13 (value -> IDENTIF .)
    $end            reduce using rule 13 (value -> IDENTIF .)
    PARDE           reduce using rule 13 (value -> IDENTIF .)
    CIERRA_RPN      reduce using rule 13 (value -> IDENTIF .)
    IDENTIF         reduce using rule 13 (value -> IDENTIF .)
    NUMERO          reduce using rule 13 (value -> IDENTIF .)


state 6

    (14) value -> NUMERO .

    MAS             reduce using rule 14 (value -> NUMERO .)
    MENOS           reduce using rule 14 (value -> NUMERO .)
    POR             reduce using rule 14 (value -> NUMERO .)
    ENTRE           reduce using rule 14 (value -> NUMERO .)
    $end            reduce using rule 14 (value -> NUMERO .)
    PARDE           reduce using rule 14 (value -> NUMERO .)
    CIERRA_RPN      reduce using rule 14 (value -> NUMERO .)
    IDENTIF         reduce using rule 14 (value -> NUMERO .)
    NUMERO          reduce using rule 14 (value -> NUMERO .)


state 7

    (2) expression -> expression MAS . expression
    (1) expression -> . PARIZ expression PARDE
    (2) expression -> . expression MAS expression
    (3) expression -> . expression MENOS expression
    (4) expression -> . expression POR expression
    (5) expression -> . expression ENTRE expression
    (6) expression -> . value
    (7) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    PARIZ           shift and go to state 2
    ABRE_RPN        shift and go to state 4
    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    expression                     shift and go to state 14
    value                          shift and go to state 3

state 8

    (3) expression -> expression MENOS . expression
    (1) expression -> . PARIZ expression PARDE
    (2) expression -> . expression MAS expression
    (3) expression -> . expression MENOS expression
    (4) expression -> . expression POR expression
    (5) expression -> . expression ENTRE expression
    (6) expression -> . value
    (7) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    PARIZ           shift and go to state 2
    ABRE_RPN        shift and go to state 4
    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    expression                     shift and go to state 15
    value                          shift and go to state 3

state 9

    (4) expression -> expression POR . expression
    (1) expression -> . PARIZ expression PARDE
    (2) expression -> . expression MAS expression
    (3) expression -> . expression MENOS expression
    (4) expression -> . expression POR expression
    (5) expression -> . expression ENTRE expression
    (6) expression -> . value
    (7) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    PARIZ           shift and go to state 2
    ABRE_RPN        shift and go to state 4
    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    expression                     shift and go to state 16
    value                          shift and go to state 3

state 10

    (5) expression -> expression ENTRE . expression
    (1) expression -> . PARIZ expression PARDE
    (2) expression -> . expression MAS expression
    (3) expression -> . expression MENOS expression
    (4) expression -> . expression POR expression
    (5) expression -> . expression ENTRE expression
    (6) expression -> . value
    (7) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    PARIZ           shift and go to state 2
    ABRE_RPN        shift and go to state 4
    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    expression                     shift and go to state 17
    value                          shift and go to state 3

state 11

    (1) expression -> PARIZ expression . PARDE
    (2) expression -> expression . MAS expression
    (3) expression -> expression . MENOS expression
    (4) expression -> expression . POR expression
    (5) expression -> expression . ENTRE expression

    PARDE           shift and go to state 18
    MAS             shift and go to state 7
    MENOS           shift and go to state 8
    POR             shift and go to state 9
    ENTRE           shift and go to state 10


state 12

    (7) expression -> ABRE_RPN special_expression . CIERRA_RPN
    (8) special_expression -> special_expression . special_expression MAS
    (9) special_expression -> special_expression . special_expression MENOS
    (10) special_expression -> special_expression . special_expression POR
    (11) special_expression -> special_expression . special_expression ENTRE
    (8) special_expression -> . special_expression special_expression MAS
    (9) special_expression -> . special_expression special_expression MENOS
    (10) special_expression -> . special_expression special_expression POR
    (11) special_expression -> . special_expression special_expression ENTRE
    (12) special_expression -> . value
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    CIERRA_RPN      shift and go to state 20
    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    special_expression             shift and go to state 19
    value                          shift and go to state 13

state 13

    (12) special_expression -> value .

    CIERRA_RPN      reduce using rule 12 (special_expression -> value .)
    IDENTIF         reduce using rule 12 (special_expression -> value .)
    NUMERO          reduce using rule 12 (special_expression -> value .)
    MAS             reduce using rule 12 (special_expression -> value .)
    MENOS           reduce using rule 12 (special_expression -> value .)
    POR             reduce using rule 12 (special_expression -> value .)
    ENTRE           reduce using rule 12 (special_expression -> value .)


state 14

    (2) expression -> expression MAS expression .
    (2) expression -> expression . MAS expression
    (3) expression -> expression . MENOS expression
    (4) expression -> expression . POR expression
    (5) expression -> expression . ENTRE expression

    MAS             reduce using rule 2 (expression -> expression MAS expression .)
    MENOS           reduce using rule 2 (expression -> expression MAS expression .)
    $end            reduce using rule 2 (expression -> expression MAS expression .)
    PARDE           reduce using rule 2 (expression -> expression MAS expression .)
    POR             shift and go to state 9
    ENTRE           shift and go to state 10

  ! POR             [ reduce using rule 2 (expression -> expression MAS expression .) ]
  ! ENTRE           [ reduce using rule 2 (expression -> expression MAS expression .) ]
  ! MAS             [ shift and go to state 7 ]
  ! MENOS           [ shift and go to state 8 ]


state 15

    (3) expression -> expression MENOS expression .
    (2) expression -> expression . MAS expression
    (3) expression -> expression . MENOS expression
    (4) expression -> expression . POR expression
    (5) expression -> expression . ENTRE expression

    MAS             reduce using rule 3 (expression -> expression MENOS expression .)
    MENOS           reduce using rule 3 (expression -> expression MENOS expression .)
    $end            reduce using rule 3 (expression -> expression MENOS expression .)
    PARDE           reduce using rule 3 (expression -> expression MENOS expression .)
    POR             shift and go to state 9
    ENTRE           shift and go to state 10

  ! POR             [ reduce using rule 3 (expression -> expression MENOS expression .) ]
  ! ENTRE           [ reduce using rule 3 (expression -> expression MENOS expression .) ]
  ! MAS             [ shift and go to state 7 ]
  ! MENOS           [ shift and go to state 8 ]


state 16

    (4) expression -> expression POR expression .
    (2) expression -> expression . MAS expression
    (3) expression -> expression . MENOS expression
    (4) expression -> expression . POR expression
    (5) expression -> expression . ENTRE expression

    MAS             reduce using rule 4 (expression -> expression POR expression .)
    MENOS           reduce using rule 4 (expression -> expression POR expression .)
    POR             reduce using rule 4 (expression -> expression POR expression .)
    ENTRE           reduce using rule 4 (expression -> expression POR expression .)
    $end            reduce using rule 4 (expression -> expression POR expression .)
    PARDE           reduce using rule 4 (expression -> expression POR expression .)

  ! MAS             [ shift and go to state 7 ]
  ! MENOS           [ shift and go to state 8 ]
  ! POR             [ shift and go to state 9 ]
  ! ENTRE           [ shift and go to state 10 ]


state 17

    (5) expression -> expression ENTRE expression .
    (2) expression -> expression . MAS expression
    (3) expression -> expression . MENOS expression
    (4) expression -> expression . POR expression
    (5) expression -> expression . ENTRE expression

    MAS             reduce using rule 5 (expression -> expression ENTRE expression .)
    MENOS           reduce using rule 5 (expression -> expression ENTRE expression .)
    POR             reduce using rule 5 (expression -> expression ENTRE expression .)
    ENTRE           reduce using rule 5 (expression -> expression ENTRE expression .)
    $end            reduce using rule 5 (expression -> expression ENTRE expression .)
    PARDE           reduce using rule 5 (expression -> expression ENTRE expression .)

  ! MAS             [ shift and go to state 7 ]
  ! MENOS           [ shift and go to state 8 ]
  ! POR             [ shift and go to state 9 ]
  ! ENTRE           [ shift and go to state 10 ]


state 18

    (1) expression -> PARIZ expression PARDE .

    MAS             reduce using rule 1 (expression -> PARIZ expression PARDE .)
    MENOS           reduce using rule 1 (expression -> PARIZ expression PARDE .)
    POR             reduce using rule 1 (expression -> PARIZ expression PARDE .)
    ENTRE           reduce using rule 1 (expression -> PARIZ expression PARDE .)
    $end            reduce using rule 1 (expression -> PARIZ expression PARDE .)
    PARDE           reduce using rule 1 (expression -> PARIZ expression PARDE .)


state 19

    (8) special_expression -> special_expression special_expression . MAS
    (9) special_expression -> special_expression special_expression . MENOS
    (10) special_expression -> special_expression special_expression . POR
    (11) special_expression -> special_expression special_expression . ENTRE
    (8) special_expression -> special_expression . special_expression MAS
    (9) special_expression -> special_expression . special_expression MENOS
    (10) special_expression -> special_expression . special_expression POR
    (11) special_expression -> special_expression . special_expression ENTRE
    (8) special_expression -> . special_expression special_expression MAS
    (9) special_expression -> . special_expression special_expression MENOS
    (10) special_expression -> . special_expression special_expression POR
    (11) special_expression -> . special_expression special_expression ENTRE
    (12) special_expression -> . value
    (13) value -> . IDENTIF
    (14) value -> . NUMERO

    MAS             shift and go to state 21
    MENOS           shift and go to state 22
    POR             shift and go to state 23
    ENTRE           shift and go to state 24
    IDENTIF         shift and go to state 5
    NUMERO          shift and go to state 6

    special_expression             shift and go to state 19
    value                          shift and go to state 13

state 20

    (7) expression -> ABRE_RPN special_expression CIERRA_RPN .

    MAS             reduce using rule 7 (expression -> ABRE_RPN special_expression CIERRA_RPN .)
    MENOS           reduce using rule 7 (expression -> ABRE_RPN special_expression CIERRA_RPN .)
    POR             reduce using rule 7 (expression -> ABRE_RPN special_expression CIERRA_RPN .)
    ENTRE           reduce using rule 7 (expression -> ABRE_RPN special_expression CIERRA_RPN .)
    $end            reduce using rule 7 (expression -> ABRE_RPN special_expression CIERRA_RPN .)
    PARDE           reduce using rule 7 (expression -> ABRE_RPN special_expression CIERRA_RPN .)


state 21

    (8) special_expression -> special_expression special_expression MAS .

    CIERRA_RPN      reduce using rule 8 (special_expression -> special_expression special_expression MAS .)
    IDENTIF         reduce using rule 8 (special_expression -> special_expression special_expression MAS .)
    NUMERO          reduce using rule 8 (special_expression -> special_expression special_expression MAS .)
    MAS             reduce using rule 8 (special_expression -> special_expression special_expression MAS .)
    MENOS           reduce using rule 8 (special_expression -> special_expression special_expression MAS .)
    POR             reduce using rule 8 (special_expression -> special_expression special_expression MAS .)
    ENTRE           reduce using rule 8 (special_expression -> special_expression special_expression MAS .)


state 22

    (9) special_expression -> special_expression special_expression MENOS .

    CIERRA_RPN      reduce using rule 9 (special_expression -> special_expression special_expression MENOS .)
    IDENTIF         reduce using rule 9 (special_expression -> special_expression special_expression MENOS .)
    NUMERO          reduce using rule 9 (special_expression -> special_expression special_expression MENOS .)
    MAS             reduce using rule 9 (special_expression -> special_expression special_expression MENOS .)
    MENOS           reduce using rule 9 (special_expression -> special_expression special_expression MENOS .)
    POR             reduce using rule 9 (special_expression -> special_expression special_expression MENOS .)
    ENTRE           reduce using rule 9 (special_expression -> special_expression special_expression MENOS .)


state 23

    (10) special_expression -> special_expression special_expression POR .

    CIERRA_RPN      reduce using rule 10 (special_expression -> special_expression special_expression POR .)
    IDENTIF         reduce using rule 10 (special_expression -> special_expression special_expression POR .)
    NUMERO          reduce using rule 10 (special_expression -> special_expression special_expression POR .)
    MAS             reduce using rule 10 (special_expression -> special_expression special_expression POR .)
    MENOS           reduce using rule 10 (special_expression -> special_expression special_expression POR .)
    POR             reduce using rule 10 (special_expression -> special_expression special_expression POR .)
    ENTRE           reduce using rule 10 (special_expression -> special_expression special_expression POR .)


state 24

    (11) special_expression -> special_expression special_expression ENTRE .

    CIERRA_RPN      reduce using rule 11 (special_expression -> special_expression special_expression ENTRE .)
    IDENTIF         reduce using rule 11 (special_expression -> special_expression special_expression ENTRE .)
    NUMERO          reduce using rule 11 (special_expression -> special_expression special_expression ENTRE .)
    MAS             reduce using rule 11 (special_expression -> special_expression special_expression ENTRE .)
    MENOS           reduce using rule 11 (special_expression -> special_expression special_expression ENTRE .)
    POR             reduce using rule 11 (special_expression -> special_expression special_expression ENTRE .)
    ENTRE           reduce using rule 11 (special_expression -> special_expression special_expression ENTRE .)

